# coil

./: .env  Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
.github/workflows/: coverage.yml  test.yml
coil/: Cargo.toml
coil/.github/workflows/: test.yml
coil/migrations/: 20200804234125_tasks.sql
coil/src/: batch.rs  db.rs  error.rs  job.rs  lib.rs  migrations.rs  queue.rs  registry.rs  runner.rs
coil/src/migrations/: 20200804234125_tasks.sql
coil_proc_macro/: '  Cargo.toml
coil_proc_macro/src/: background_job.rs  lib.rs
integration_tests/: Cargo.toml
integration_tests/tests/: codegen.rs  dummy_jobs.rs  lib.rs  runner.rs  test_guard.rs
