[package]
name = "coil"
description = "An async and sync background job queue for Postgres"
version = "0.1.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
license = "GPL-3.0"
homepage = "https://github.com/insipx/coil"
repository = "https://github.com/insipx/coil"
keywords = ["database", "jobs", "tasks", "background", "postgres"]
categories = ["asynchronous", "database", "concurrency"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", features = ["postgres"] }
rayon = "1.3"
serde = "1.0"
rmp-serde = "0.14"
thiserror = "1.0"
inventory = "0.1"
coil_proc_macro = { path = "../coil_proc_macro/" }
futures = "0.3.5"
async-trait = "0.1.36"
timer = { version = "3.0", package = "futures-timer" }
log = "0.4.11"
channel = { version = "1.4.0", package = "async-channel" }
itoa = "0.4.6"

[dev-dependencies]
once_cell = "1.4"
dotenv = "0.15"
smol = "0.3"

[features]
nightly = []
offline = ["sqlx/offline"]
test_components = []
analyze = []
