[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coil = { path = "../coil" }
sqlx = { version = "0.3.5" }
serde = { version = "1.0", features = ["derive"] }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = ["coil/nightly"]

