[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coil = { path = "../coil" }
sqlx = { version = "0.4.0-beta.1", features = ["postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
smol = "0.3.3"
futures = "0.3.5"
linkme = "0.2.2"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = ["coil/nightly"]

