[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coil = { path = "../coil", features = ["test_components", "analyze"] }
sqlx = { version = "0.4.0-beta.1", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
smol = "0.3.3"
futures = "0.3.5"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.11"
once_cell = "1.4.0"
assert_matches = "1.3.0"
anyhow = "1.0.32"
antidote = "1.0.0"
channel = { version = "1.4.0", package = "async-channel" }
timer = { version = "3.0", package = "futures-timer" }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[features]
nightly = ["coil/nightly"]
offline = ["sqlx/offline"]
